Sonar fixes
Signed-off-by: Edwin Greene <edwin.greene@hedera.com>