@@ -22,6 +22,10 @@ package com.hedera.mirror.common.domain.transaction;
 
 import com.google.protobuf.ByteString;
 import com.google.protobuf.InvalidProtocolBufferException;
+
+import com.hedera.services.stream.proto.ContractActions;
+import com.hedera.services.stream.proto.ContractStateChanges;
+
 import com.hederahashgraph.api.proto.java.ResponseCodeEnum;
 import com.hederahashgraph.api.proto.java.SignatureMap;
 import com.hederahashgraph.api.proto.java.SignedTransaction;
@@ -114,17 +118,18 @@ public class RecordItem implements StreamItem {
     // Used only in tests
     // There are many brittle RecordItemParser*Tests which rely on bytes being null. Those tests need to be fixed,
     // then this function can be removed.
-    public RecordItem(Version hapiVersion, Transaction transaction, TransactionRecord record, List<TransactionSidecarRecord> sidecarRecords) {
+    public RecordItem(Version hapiVersion, Transaction transaction, TransactionRecord transactionRecord,
+                      List<TransactionSidecarRecord> sidecarRecords) {
         Objects.requireNonNull(transaction, "transaction is required");
-        Objects.requireNonNull(record, "record is required");
+        Objects.requireNonNull(transactionRecord, "record is required");
 
         this.hapiVersion = hapiVersion;
         this.transaction = transaction;
         transactionBodyAndSignatureMap = parseTransactionBodyAndSignatureMap(transaction);
         transactionType = getTransactionType(transactionBodyAndSignatureMap.getTransactionBody());
-        this.record = record;
+        this.record = transactionRecord;
         transactionBytes = transaction.toByteArray();
-        recordBytes = record.toByteArray();
+        recordBytes = transactionRecord.toByteArray();
         this.sidecarRecords = sidecarRecords;
         transactionIndex = null;
         parent = null;
@@ -136,13 +141,13 @@ public class RecordItem implements StreamItem {
     }
 
     // Used only in tests, default hapiVersion to RecordFile.HAPI_VERSION_NOT_SET
-    public RecordItem(Transaction transaction, TransactionRecord record, List<TransactionSidecarRecord> sidecarRecords) {
-        this(RecordFile.HAPI_VERSION_NOT_SET, transaction, record, sidecarRecords);
+    public RecordItem(Transaction transaction, TransactionRecord transactionRecord, List<TransactionSidecarRecord> sidecarRecords) {
+        this(RecordFile.HAPI_VERSION_NOT_SET, transaction, transactionRecord, sidecarRecords);
     }
 
     // Used only in tests, default hapiVersion to RecordFile.HAPI_VERSION_NOT_SET and no sidecarRecords
-    public RecordItem(Transaction transaction, TransactionRecord record) {
-        this(RecordFile.HAPI_VERSION_NOT_SET, transaction, record, Collections.emptyList());
+    public RecordItem(Transaction transaction, TransactionRecord transactionRecord) {
+        this(RecordFile.HAPI_VERSION_NOT_SET, transaction, transactionRecord, Collections.emptyList());
     }
 
     private static TransactionBodyAndSignatureMap parseTransactionBodyAndSignatureMap(Transaction transaction) {
@@ -169,23 +174,22 @@ public class RecordItem implements StreamItem {
 
     public List<ContractStateChange> getContractStateChanges() {
         return sidecarRecords.stream()
-                .map(r -> r.getStateChanges())
-                .map(r -> r.getContractStateChangesList())
-                .flatMap(Collection::stream).collect(Collectors.toList());
+                .map(TransactionSidecarRecord::getStateChanges)
+                .map(ContractStateChanges::getContractStateChangesList)
+                .flatMap(Collection::stream).toList();
     }
 
     public List<ContractAction> getContractActions() {
         return sidecarRecords.stream()
-                .map(r -> r.getActions())
-                .map(a -> a.getContractActionsList())
-                .flatMap(Collection::stream).collect(Collectors.toList());
+                .map(TransactionSidecarRecord::getActions)
+                .map(ContractActions::getContractActionsList)
+                .flatMap(Collection::stream).toList();
     }
 
     public List<ContractBytecode> getContractBytecode() {
         return sidecarRecords.stream()
-                .filter(r -> r.hasBytecode())
-                .map(r -> r.getBytecode())
-                .collect(Collectors.toList());
+                .filter(TransactionSidecarRecord::hasBytecode)
+                .map(TransactionSidecarRecord::getBytecode).toList();
     }
 
     /**
